# PyDocGenerator

./: .gitignore  .pypirc  LICENSE  README.md  pyproject.toml  requirements.txt
src/pydocgenerator/: __init__.py  pydoc.py
tests/: __init__.py
